challenges/pro-dev/k8s/no-upvote/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: votes-app
  labels:
    name: votes-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: votes-app-ingress
  namespace: votes-app
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: votes-app
            port:
              number: 3001
        path: /tally
        pathType: Prefix
      - backend:
          service:
            name: votes-api
            port:
              number: 3333
        path: /votes
        pathType: Exact
      - backend:
          service:
            name: votes-api
            port:
              number: 3333
        path: /vote
        pathType: Exact
